log
Wed 10 May 2023 03:53:40 PM UTC: 
 tests:  0|4
total_score: 0/70
8811f3a
Wed 10 May 2023 04:17:08 PM UTC: 
 heap.c | 29 +++++++++++------------------
 1 file changed, 11 insertions(+), 18 deletions(-)
 tests:  1|3
total_score: 10/70
883e0d9
Wed 10 May 2023 04:19:29 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
76156ad
Wed 10 May 2023 05:51:21 PM UTC: 
 heap.c | 31 +++++++++++++++++++++++++++++--
 1 file changed, 29 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:45:11: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   45 |     array = (int *)realloc(array, sizeof(int) * (1 + pq->capac * 2));
      |           ^
cc1: all warnings being treated as errors
Compilation failed
ba783f5
Wed 10 May 2023 05:52:24 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
efaee9a
Wed 10 May 2023 05:54:07 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
dd03725
Wed 10 May 2023 06:10:06 PM UTC: 
 heap.c | 49 +++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 41 insertions(+), 8 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heapify_d’:
heap.c:38:28: error: ‘H->heapArray’ is a pointer; did you mean to use ‘->’?
   38 |     } else if (H->heapArray.priority[right] > H->heapArray[index].priority) {
      |                            ^
      |                            ->
heap.c:29:22: error: unused variable ‘aux’ [-Werror=unused-variable]
   29 |     int left, right, aux;
      |                      ^~~
heap.c: In function ‘heap_pop’:
heap.c:86:14: error: unused variable ‘lastNode’ [-Werror=unused-variable]
   86 |     heapElem lastNode = pq->heapArray[pq->size - 1];
      |              ^~~~~~~~
heap.c:85:14: error: unused variable ‘root’ [-Werror=unused-variable]
   85 |     heapElem root = pq->heapArray[0];
      |              ^~~~
test.c: In function ‘heapify_u’:
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
test.c: In function ‘swap’:
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
63133ef
Wed 10 May 2023 06:11:20 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heapify_d’:
heap.c:28:22: error: unused variable ‘aux’ [-Werror=unused-variable]
   28 |     int left, right, aux;
      |                      ^~~
heap.c: In function ‘heap_pop’:
heap.c:83:16: error: unused variable ‘lastNode’ [-Werror=unused-variable]
   83 |       heapElem lastNode = pq->heapArray[pq->size - 1];
      |                ^~~~~~~~
heap.c:82:16: error: unused variable ‘root’ [-Werror=unused-variable]
   82 |       heapElem root = pq->heapArray[0];
      |                ^~~~
test.c: In function ‘heapify_u’:
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
test.c: In function ‘swap’:
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
837d8f6
